<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".agregarPeluche.view.AgregarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/ingresartitle" />

    <EditText
        android:id="@+id/eCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"
        android:textSize="24dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="24dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/eCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:textSize="24dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/ePrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        android:textSize="24dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/bGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/bAgregar" />


</LinearLayout>