<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inventarioPeluche.view.InventarioFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tInventario"
        android:textSize="24dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tListaPeluches"
        android:textSize="24dp"
        android:id="@+id/tInventario"/>

    <Button
        android:id="@+id/bInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/bInventario" />

</LinearLayout>